<resources>
    <string name="app_name">NovApp</string>
    <string name="nav">Navigate</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="exit">Exit</string>
    <string name="stay">Stay</string>
    <string name="submit">Submit</string>
    <string name="loading">Loading</string>
    <string-array name="array">
        <item>nahid</item>
        <item>aditi</item>
        <item>anjali</item>
        <item>kolla</item>
        <item>narayan</item>
    </string-array>
</resources>
